[gd_scene load_steps=3 format=3 uid="uid://ff3q6eymtcbm"]

[ext_resource type="Script" uid="uid://kh1xct3n8evn" path="res://scripts/game_ui.gd" id="1_rns2u"]
[ext_resource type="Texture2D" uid="uid://beu8rdhel6a2x" path="res://icon.svg" id="1_yubou"]

[node name="GameUi" type="CanvasLayer"]
script = ExtResource("1_rns2u")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -659.0
offset_top = -178.0
offset_right = -521.0
offset_bottom = 7.0
grow_horizontal = 0
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="PanelContainer"]
layout_mode = 2
columns = 2

[node name="FuelIcon" type="TextureRect" parent="PanelContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("1_yubou")
expand_mode = 2
stretch_mode = 4

[node name="FuelLabel" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2
text = "FuelLabel"

[node name="ScoreIcon" type="TextureRect" parent="PanelContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("1_yubou")
expand_mode = 2
stretch_mode = 4

[node name="ScoreLabel" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2
text = "FuelLabel"

[node name="MissionTimeIcon" type="TextureRect" parent="PanelContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("1_yubou")
expand_mode = 2
stretch_mode = 4

[node name="MissionTimeLabel" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2
text = "FuelLabel"

[node name="AltitudeIcon" type="TextureRect" parent="PanelContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("1_yubou")
expand_mode = 2
stretch_mode = 4

[node name="AltitudeLabel" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2
text = "FuelLabel"

[node name="HorizontalSpeedIcon" type="TextureRect" parent="PanelContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("1_yubou")
expand_mode = 2
stretch_mode = 4

[node name="HorizontalSpeedLabel" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2
text = "FuelLabel"

[node name="VerticalSpeedIcon" type="TextureRect" parent="PanelContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("1_yubou")
expand_mode = 2
stretch_mode = 4

[node name="VerticalSpeedLabel" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2
text = "FuelLabel"

[node name="MissionStatusIcon" type="TextureRect" parent="PanelContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("1_yubou")
expand_mode = 2
stretch_mode = 4

[node name="MissionStatusLabel" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2
text = "FuelLabel"
